--- a/myPortfolio.html
+++ b/myPortfolio.html
@@ -146,6 +146,9 @@
             <ul>
                 <li>Mern Messenger</li>
                 <li>Bookify</li>
+                <li>SWOT Analysis on Meesho</li>
+                <li>SWOT Analysis on Cred </li>
+                <li> Worked on imdb dataset </li>
                 <li>Adding more soon </li>
             </ul>
         </div>
