--- a/index.html
+++ b/index.html
@@ -155,13 +155,13 @@
         <div class="contact-box">
             <h3>Skills</h3>
             <ul>
-                <li class="skills-heading">Technical Skills</li>
+                <li class="skills-heading"><b>Technical Skills</b></li>
                 <li>C</li>
                 <li>C++</li>
                 <li>MERN Stack</li>
                 <li>SQL</li>
                 <li>Android Studio</li>
-                <li class="skills-heading">Non-Technical Skills</li>
+                <li class="skills-heading"><b>Non-Technical Skills</b></li>
                 <li>Public Speaking</li>
                 <li>Business Analysis</li>
                 <li>Sports</li>
